--- a/style/index.css
+++ b/style/index.css
@@ -53,8 +53,10 @@ body {
   cursor: pointer;
   background-color: transparent;
   background-image: url('../img/login.svg');
-  background-position: center;
+  background-position: left;
+  background-repeat: no-repeat;
   background-size: contain;
+  padding-left: 35px;
   width: 30px;
   height: 30px;
 }
